--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Banner"
         tools:targetApi="31" >
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
+
+        <activity android:name=".WelcomeActivity"
+            android:theme="@style/Theme.Banner" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
