--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
 
         <activity android:name=".WelcomeActivity"
             android:theme="@style/Theme.Banner" />
+
+        <activity android:name=".MenuActivity"
+            android:theme="@style/Theme.Banner" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
