Funcionalidad de edit lapiz

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".frontend.views.student.Student"
             android:theme="@style/Theme.Banner" />
 
-        <activity android:name=".frontend.views.professor.Teacher"
+        <activity android:name=".frontend.views.teacher.Teacher"
             android:theme="@style/Theme.Banner" />
 
         <activity android:name=".frontend.views.course.Course"
@@ -31,7 +31,7 @@
         <activity android:name=".frontend.views.career.Career"
             android:theme="@style/Theme.Banner" />
 
-        <activity android:name=".frontend.views.cicle.Semester"
+        <activity android:name=".frontend.views.semester.Semester"
             android:theme="@style/Theme.Banner" />
 
         <activity android:name=".frontend.views.group.Group"
@@ -47,9 +47,9 @@
 
         <activity android:name=".frontend.views.student.EditStudentActivity" />
 
-        <activity android:name=".frontend.views.professor.EditTeacherActivity" />
+        <activity android:name=".frontend.views.teacher.EditTeacherActivity" />
 
-        <activity android:name=".frontend.views.cicle.EditSemesterActivity" />
+        <activity android:name=".frontend.views.semester.EditSemesterActivity" />
 
         <activity android:name=".frontend.views.course.EditCourseActivity" />
 
@@ -61,7 +61,7 @@
 
         <activity android:name=".frontend.views.career.AddCareer" />
 
-        <activity android:name=".frontend.views.cicle.AddSemester" />
+        <activity android:name=".frontend.views.semester.AddSemester" />
 
         <activity android:name=".frontend.views.course.AddCourse" />
 
@@ -71,7 +71,7 @@
 
         <activity android:name=".frontend.views.enrollment.AddEnrollment" />
 
-        <activity android:name=".frontend.views.professor.AddTeacher" />
+        <activity android:name=".frontend.views.teacher.AddTeacher" />
 
         <activity android:name=".frontend.views.user.AddUser" />
 
